--- a/src/LarpManager/Views/admin/personnage/fiches.twig
+++ b/src/LarpManager/Views/admin/personnage/fiches.twig
@@ -32,7 +32,7 @@
 				<table>
 					<thead>
 						<tr>
-							<th>Renommé</th>
+							<th>Renommée</th>
 							<th>Pugilat</th>
 							<th>Expérience</th>
 							<th>Expérience disponible</th>
@@ -81,7 +81,7 @@
 						</tr>
 						<tr>
 							<td colspan="4">
-								<strong>Languages</strong><br />
+								<strong>Langages</strong><br />
 								<ul>
 								{% for personnageLangue in personnage.personnageLangues %}
 									<li><strong>{{ personnageLangue.langue}}</strong> ({{ personnageLangue.source }})</li>
