--- a/src/LarpManager/Views/public/competence/index.twig
+++ b/src/LarpManager/Views/public/competence/index.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Competences{% endblock title %}
+{% block title %}Compétences{% endblock title %}
 
 {% block content %}
 
