--- a/src/LarpManager/Views/public/personnage/competence.twig
+++ b/src/LarpManager/Views/public/personnage/competence.twig
@@ -40,7 +40,7 @@
 	
 			<div class="well well-sm">
 				<div class="header">
-					<h5>Détail des competences accessibles</h5>
+					<h5>Détail des compétences accessibles</h5>
 				</div>
 				
 				<div class="list-group">
