correction de la faille d'injection SQL sur TerritoireController / TerritoireRepository

--- a/src/LarpManager/Views/territoire/fief.twig
+++ b/src/LarpManager/Views/territoire/fief.twig
@@ -23,7 +23,7 @@
 			<strong>{{ paginator.totalItems }}</strong> fiefs trouvés.
 		{% endif %}
 
-		Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
+		Résultats affichés : <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
 
 		<div class="btn-toolbar" role="toolbar" aria-label="...">
 			<div class="btn-group" role="group" aria-label="...">
