--- a/src/LarpManager/Views/public/personnage/fragment/magie.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/magie.twig
@@ -21,7 +21,7 @@
 				{% if sort.domaine in personnage.domaines %} 
 					{{ sort.niveau }}
 				{% else %} 
-					{{ sort.niveau * 2 }}
+					{{ sort.niveau + 1 }}
 				{% endif %}
 				Mana)
 			</a>
