Orthographe et magie
Orthographe et magie

--- a/src/LarpManager/Modules/Example/Views/index.twig
+++ b/src/LarpManager/Modules/Example/Views/index.twig
@@ -1,7 +1,7 @@
 {% extends "layout.twig" %}
 
-{% block title %}Example{% endblock title %}
+{% block title %}Exemple{% endblock title %}
 
 {% block content %}
-Ceci est une page d'example d'un module de LarpManager
+Ceci est une page d'exemple d'un module de LarpManager
 {% endblock content %}
