--- a/src/LarpManager/Modules/Example/Views/Hooks/menu.twig
+++ b/src/LarpManager/Modules/Example/Views/Hooks/menu.twig
@@ -1,6 +1,6 @@
 <li class="dropdown">
 	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-		Example
+		Exemple
 	</a>
 	<ul class="dropdown-menu">
 		<li><a href="{{ path('example.index') }}">Page de test</a></li>
