Rendre plus générique la page d'accueil déconnecté

--- a/src/LarpManager/Views/homepage/not_connected.twig
+++ b/src/LarpManager/Views/homepage/not_connected.twig
@@ -7,11 +7,11 @@
 	<div class="row">
 		<div class="col-md-10">
 			<div class="header">
-				<h5>LarpManager ? qu'est-ce donc ?</h5>
+				<h5>LarpManager ? Qu'est-ce donc ?</h5>
 			</div>
 			<p class="lead">
-				LarpManager est le logiciel utilisé par Eve-Oniris pour la gestion de ses jeux grandeur nature. 
-				Il est obligatoire de se créer un compte sur LarpManager pour pouvoir participer au jeu "Légendes d'Hyborées 3" qui aura lieu du 25 au 27 aout 2017.
+				LarpManager est l'outil web utilisé par Eve-Oniris pour la gestion de ses jeux grandeur nature. 
+				Il est obligatoire de se créer un compte sur LarpManager pour pouvoir participer aux jeux "Légendes d'Hyborées".
 				<ul>
 					<li>Vous êtes un nouveau joueur ? <a href="{{ path('user.register') }}">Créez vous un compte</a>, forgez votre personnage, et rejoignez l'un des nombreux groupes de joueurs.</li>
 					<li>Vous êtes un ancien joueur ? <a href="{{ path('user.login') }}">Connectez vous</a> et poursuivez l'aventure.</li>
