Correction de coquilles sur la page

--- a/src/LarpManager/Views/homepage/not_connected.twig
+++ b/src/LarpManager/Views/homepage/not_connected.twig
@@ -10,8 +10,8 @@
 				<h5>LarpManager ? Qu'est-ce donc ?</h5>
 			</div>
 			<p class="lead">
-				LarpManager est l'outil web utilisé par Eve-Oniris pour la gestion de ses jeux grandeur nature. 
-				Il est obligatoire de se créer un compte sur LarpManager pour pouvoir participer aux jeux "Légendes d'Hyborées".
+				Le LarpManager est l'outil web utilisé par Eve-Oniris pour la gestion de ses jeux de rôle grandeur nature. 
+				Il est obligatoire de se créer un compte sur le LarpManager pour pouvoir participer aux jeux "Légendes d'Hyborée".
 				<ul>
 					<li>Vous êtes un nouveau joueur ? <a href="{{ path('user.register') }}">Créez vous un compte</a>, forgez votre personnage, et rejoignez l'un des nombreux groupes de joueurs.</li>
 					<li>Vous êtes un ancien joueur ? <a href="{{ path('user.login') }}">Connectez vous</a> et poursuivez l'aventure.</li>
