--- a/src/LarpManager/Views/homepage/not_connected.twig
+++ b/src/LarpManager/Views/homepage/not_connected.twig
@@ -10,7 +10,7 @@
 				<h5>LarpManager ? Qu'est-ce donc ?</h5>
 			</div>
 			<p class="lead">
-				Le LarpManager est l'outil web utilisé par Eve-Oniris pour la gestion de ses jeux de rôle grandeur nature. 
+				Le LarpManager est l'outil web utilisé par Eve-Oniris pour la gestion de ses jeux de rôle grandeur nature.<br />
 				Il est obligatoire de se créer un compte sur le LarpManager pour pouvoir participer aux jeux "Légendes d'Hyborée".
 				<ul>
 					<li>Vous êtes un nouveau joueur ? <a href="{{ path('user.register') }}">Créez vous un compte</a>, forgez votre personnage, et rejoignez l'un des nombreux groupes de joueurs.</li>
