--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -44,10 +44,8 @@ table tr td {
 				<td>
 					{% if personnage.user %}
 						{% if personnage.user.etatCivil %}
-							Personne à contacter en cas d'urgence : {{ personnage.user.etatCivil.personneAPrevenir }}
-							<br />
-							Téléphone : {{ personnage.user.etatCivil.telPap }}
-							<br />
+							Personne à contacter en cas d'urgence : <br />{{ personnage.user.etatCivil.personneAPrevenir }}<br />
+							Téléphone : {{ personnage.user.etatCivil.telPap }}<br />
 							Problèmes médicaux : {{ personnage.user.etatCivil.problemeMedicaux }} 
 						{% endif %}
 					{% endif %}
@@ -75,7 +73,7 @@ table tr td {
 	<table>
 		<thead>
 			<tr>
-				<th>Compétences</th>
+				<th>Expérience</th>
 				<th>Religions</th>
 				<th>Langages</th>
 			</tr>
@@ -98,12 +96,13 @@ table tr td {
 		</tbody>
 	</table>		
 
-        <div style="border: 1px solid #000;padding: 5px;">
-        {% for competence in personnage.competences %}
-                <strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> :
-                {{ competence.descriptionRaw }}<br />
-        {% endfor %}
-        </div>
+	<div style="border: 1px solid #000;padding: 5px;">
+	<h3><strong>Compétences</strong></h3>
+	{% for competence in personnage.competences %}
+			<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> :
+			{{ competence.descriptionRaw }}<br />
+	{% endfor %}
+	</div>
 	
 	<table>
 		<thead>
@@ -149,7 +148,7 @@ table tr td {
 					{% endfor %}
 					
 					{% for postulant in personnage.postulants %}
-						Candidature au groupe {{ postulant.secondaryGroup.label }} en attente de validation.<br />
+						{{ postulant.secondaryGroup.label }} en attente de validation.<br />
 					{% endfor %}
 				</td>
 			</tr>
