--- a/src/LarpManager/Views/admin/groupe/printPerso.twig
+++ b/src/LarpManager/Views/admin/groupe/printPerso.twig
@@ -46,10 +46,8 @@ table tr td {
 				<td>
 					{% if personnage.user %}
 						{% if personnage.user.etatCivil %}
-							Personne à contacter en cas d'urgence : {{ personnage.user.etatCivil.personneAPrevenir }}
-							<br />
-							Téléphone : {{ personnage.user.etatCivil.telPap }}
-							<br />
+							Personne à contacter en cas d'urgence : {{ personnage.user.etatCivil.personneAPrevenir }}<br />
+							Téléphone : {{ personnage.user.etatCivil.telPap }}<br />
 							Problèmes médicaux : {{ personnage.user.etatCivil.problemeMedicaux }} 
 						{% endif %}
 					{% endif %}
@@ -101,8 +99,7 @@ table tr td {
 	
 	<div style="border: 1px solid #000;padding: 5px;">
 	{% for competence in personnage.competences %}
-		<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> : 
-		{{ competence.descriptionRaw }}<br />
+		<strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }})</strong> : {{ competence.descriptionRaw }}<br />
 	{% endfor %}
 	</div>
 
