Dieu sur le détail enveloppe perso

--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -33,7 +33,12 @@
 	<li>Aucun matériel</li>
 {% endfor %}
 </ul>
-
+{% for religion in personnage.personnagesReligions %}
+{% if religion.religionLevel.index >= 2 %}
+	<strong>Divinité principale : </strong>{{ religion.religion }} ({{ religion.religionLevel.label }})<br />
+{% endif %}
+{% endfor %}
+<br />
 <strong>Lié aux langues</strong>
 <ul>
 	{% for materiel in langueMateriel %}
