--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -22,8 +22,12 @@
 <strong>Richesse :</strong> {{ personnage.richesse|default(0) }} pièces d'argent<br />
 <br />
 <strong>Lié aux compétences</strong>
-<ul>	
+<ul>
+{% set displayReligion = 0 %}
 {% for competence in personnage.competences %}
+	{% if competence.id == 112 %}
+		{% set displayReligion = 1 %}
+	{% endif %}
 	{% if competence.materiel %}
 		<li><strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }}) : </strong>
 			{{ competence.materielRaw }}
@@ -33,11 +37,18 @@
 	<li>Aucun matériel</li>
 {% endfor %}
 </ul>
-{% for religion in personnage.personnagesReligions %}
-{% if religion.religionLevel.index >= 2 %}
-	<strong>Divinité principale : </strong>{{ religion.religion }} ({{ religion.religionLevel.label }})<br />
+{% if displayReligion == 1 %}
+	{% set enoughReligion = 0 %}
+	{% for religion in personnage.personnagesReligions %}
+	{% if religion.religionLevel.index >= 2 %}
+		{% set enoughReligion = 1 %}
+		<strong>Divinité principale : </strong>{{ religion.religion }} ({{ religion.religionLevel.label }})<br />
+	{% endif %}
+	{% endfor %}
+	{% if enoughReligion == 0 %}
+		CE PRÊTRE N'A PAS ASSEZ DE FERVEUR
+	{% endif %}
 {% endif %}
-{% endfor %}
 <br />
 <strong>Lié aux langues</strong>
 <ul>
