--- a/src/LarpManager/Views/langue/detail.twig
+++ b/src/LarpManager/Views/langue/detail.twig
@@ -16,7 +16,12 @@
 			</div>
 		
   			<div class="list-group">
-		    		
+				{% if langue.secret %}
+	    		<div class="list-group-item">
+			    	<h4 class="list-group-item-heading"><span style="color:red;">Langue secrète</span></h4>
+			    </div>
+				{% endif %}
+
 		    	<div class="list-group-item">
 			    	<h4 class="list-group-item-heading">Description</h4>
 	    			<p class="list-group-item-text">
@@ -56,7 +61,7 @@
     			{% endif %}
     			
 	    		<div class="list-group-item">
-		    		<h4 class="list-group-item-heading">Liste des territoires ou cette langue est parlée ({{ langue.territoireSecondaires|length }} territoires)</h4>
+		    		<h4 class="list-group-item-heading">Liste des territoires où cette langue est parlée ({{ langue.territoireSecondaires|length }} territoires)</h4>
     				<p class="list-group-item-text">
 						<ul>
 						{% for territoire in langue.territoireSecondaires %}
