--- a/src/LarpManager/Views/public/potion/detail.twig
+++ b/src/LarpManager/Views/public/potion/detail.twig
@@ -20,9 +20,8 @@
 	{{ potion.description|markdown }}
 	
 	<object type="application/pdf" width="100%" height="1200px" >
-		<param name="src" value="{{ path('participant.potion.document',{'participant': participant.id, 'potion' :potion.id}) }}" />
-	 
-		<p>It appears your Web browser is not configured to display PDF files. No worries, just <a href="{{ path('participant.potion.document',{'participant': participant.id, 'potion' :potion.id}) }}">click here to download the PDF file.</a></p>
+		<param name="src" value="{{ path('participant.potion.document',{'participant': participant.id, 'potion' :potion.id, 'filename': filename}) }}" />
+		<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.potion.document',{'participant': participant.id, 'potion' :potion.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
 	</object>
 
 </div>
