--- a/src/LarpManager/Views/public/sort/detail.twig
+++ b/src/LarpManager/Views/public/sort/detail.twig
@@ -7,7 +7,7 @@
 <ol class="breadcrumb">
 	<li><a href="{{ path('homepage')  }}">Accueil</a></li>
 	<li><a href="{{ path('gn.detail', {'gn' : participant.gn.id}) }}">{{ participant.gn.label }}</a></li>
-	<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} {{ participant.personnage.surnom }}</a></li>
+	<li><a href="{{ path('gn.personnage', {'gn': participant.gn.id}) }}">{{ participant.personnage.nom }} - {{ participant.personnage.surnom }}</a></li>
 	<li class="active">{{ sort.label }} - {{ sort.domaine.label }} Niveau {{ sort.niveau }}</li>
 </ol>
 
@@ -22,9 +22,8 @@
 	<center><h6>Coût en Mana : {% if sort.domaine in participant.personnage.domaines %}{{ sort.niveau }}{% else %}{{ sort.niveau + 1 }}{% endif %}</h6></center>
 	
 	<object type="application/pdf" width="100%" height="1200px" >
-		<param name="src" value="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id}) }}" />
-	 
-		<p>It appears your Web browser is not configured to display PDF files. No worries, just <a href="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id}) }}">click here to download the PDF file.</a></p>
+		<param name="src" value="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}" />
+		<p>Si le PDF n'apparait pas correctement dans votre navigateur, <a href="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}">cliquez ici</a> pour télécharger le fichier.</p>
 	</object>
 
 </div>
