--- a/src/LarpManager/Views/public/newUser/step1.twig
+++ b/src/LarpManager/Views/public/newUser/step1.twig
@@ -8,7 +8,7 @@
   <hr />
   <p>Avant de pouvoir rejoindre un groupe et créer votre personnage, vous devez compléter votre compte.</p>
   <p>Les informations demandées sont obligatoires pour participer aux jeux grandeurs natures de l'association Eve-Oniris.</p>
-  <p>Cette procédure n'est a suivre qu'une seule fois.</p>
+  <p>Cette procédure n'est à suivre qu'une seule fois.</p>
   <div class="clearfix">
   	<div class="pull-right">
   		<p>
