--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -118,6 +118,7 @@
 											<ul class="dropdown-menu">
 												<li><a href="{{ path('personnage.admin.update.renomme', {'personnage': personnage.id}) }}">Modifier la Renommée</a></li>
 												<li><a href="{{ path('personnage.admin.update.heroisme', {'personnage': personnage.id}) }}">Modifier l'Héroïsme</a></li>
+												<li><a href="{{ path('personnage.admin.update.pugilat', {'personnage': personnage.id}) }}">Modifier le Pugilat</a></li>
 												<li><a href="{{ path('personnage.admin.update.domaine', {'personnage': personnage.id}) }}">Modifier la liste des domaines de magie</a></li>
 												<li><a href="{{ path('personnage.admin.religion.add', {'personnage': personnage.id}) }}">Ajouter une religion</a></li>
 												<li><a href="{{ path('personnage.admin.origine.update', {'personnage': personnage.id}) }}">Modifier l'origine</a></li>
@@ -139,28 +140,37 @@
 									</a>
 							</p>
 							<div class="collapse" id="renommeHistory">
-								<h6>Historique</h6>		
-									
+								<h6>Historique</h6>
 								<div class="list-group">
 									{% for historique in personnage.renommeHistories %}
-										<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {{ historique.renomme }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
+										<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {% if historique.renomme > 0 %}+{% endif %}{{ historique.renomme }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
 									{% endfor %}
 								</div>
 							</div>
 							<p>Héroïsme : <strong class="text-success">{{ personnage.heroisme|default(0) }}</strong>
 								<a role="button" data-toggle="collapse" href="#heroismeHistory" aria-expanded="false" aria-controls="collapseExample">
 									<i class="fa fa-history" aria-hidden="true"></i>
-								</a>
+								</a></p>
 							<div class="collapse" id="heroismeHistory">
 								<h6>Historique</h6>		
 								<div class="list-group">
 									{% for historique in personnage.heroismeHistories %}
-										<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {{ historique.heroisme }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
+										<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {% if historique.heroisme > 0 %}+{% endif %}{{ historique.heroisme }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
 									{% endfor %}
 								</div>
 							</div>
-							<p>Pugilat : <strong class="text-success">{{ personnage.pugilat }}</strong></p>
-														
+							<p>Pugilat : <strong class="text-success">{{ personnage.pugilat|default(0) }}</strong>
+								<a role="button" data-toggle="collapse" href="#pugilatHistory" aria-expanded="false" aria-controls="collapseExample">
+									<i class="fa fa-history" aria-hidden="true"></i>
+								</a></p>
+							<div class="collapse" id="pugilatHistory">
+								<h6>Historique</h6>		
+								<div class="list-group">
+									{% for historique in personnage.pugilatHistories %}
+										<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {% if historique.pugilat > 0 %}+{% endif %}{{ historique.pugilat }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
+									{% endfor %}
+								</div>
+							</div>														
 							<h6>Domaines de magie</h6>
 							<div class="list-group">
 								{% for domaine in personnage.domaines %}
