--- a/src/LarpManager/Views/public/personnage/fragment/pugilat.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/pugilat.twig
@@ -5,12 +5,25 @@
 <div class="row">
 	<div class="col-sm-6">
 		<center>
-			<h4>{{ personnage.pugilat }}</h4>
+			<h4>{{ personnage.pugilat }}
+			<a role="button" data-toggle="collapse" href="#pugilatHistory" aria-expanded="false" aria-controls="collapseExample">
+				<i class="fa fa-history" aria-hidden="true"></i>
+			</a></h4>
 		</center>
+		<div class="collapse" id="pugilatHistory">
+			<h6>Historique</h6>		
+			<div class="list-group">
+				<div class="list-group-item">Vos niveaux cumulés des compétences martiales.</div>
+				{% for historique in personnage.pugilatHistories %}
+					<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {% if historique.pugilat > 0 %}+{% endif %}{{ historique.pugilat }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
+				{% endfor %}
+			</div>
+		</div>
 	</div>
 	<div class="col-sm-6">
-		Le score de pugilat est le nombre de niveaux cumulés (apprenti 1, initié 2, expert 3 etc…) dans les compétences martiales :
-		Agilité / Armes à distance / Armes à 1 main / Armes à 2 mains / Armes d’hast / Armure / Attaque sournoise / Protection / Résistance / Sauvagerie / Stratégie / Survie
-		Si quelqu'un essaie d'intervenir avec une arme dans votre combat, l'effet du pugilat s'applique immédiatement. (écourtez le combat)
+		Le score de Pugilat est le nombre de niveaux cumulés (Apprenti 1, Initié 2, Expert 3, etc) dans les compétences suivantes :<br />
+		Agilité / Armes à distance / Armes à 1 main / Armes à 2 mains / Armes d’hast / Armure / Attaque sournoise / Protection / Résistance / Sauvagerie / Stratégie / Survie<br />
+		Si quelqu'un essaie d'intervenir avec une arme dans votre combat, l'effet du Pugilat s'applique immédiatement. (écourtez le combat)<br />
+		Certains faits de jeu peuvent également modifier ce score.
 	</div>		
 </div>
