--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -25,9 +25,6 @@
 <ul>
 {% set displayReligion = 0 %}
 {% for competence in personnage.competences %}
-	{% if competence.id == 112 %}
-		{% set displayReligion = 1 %}
-	{% endif %}
 	{% if competence.materiel %}
 		<li><strong>{{ competence.competenceFamily.label }}&nbsp({{ competence.level.label }}) : </strong>
 			{{ competence.materielRaw }}
@@ -37,7 +34,7 @@
 	<li>Aucun matériel</li>
 {% endfor %}
 </ul>
-{% if displayReligion == 1 %}
+{% if personnage.hasCompetence('Prêtrise') %}
 	{% set enoughReligion = 0 %}
 	{% for religion in personnage.personnagesReligions %}
 	{% if religion.religionLevel.index >= 2 %}
